--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,11 @@ section {
 	transform: translateY(-50%);
 }
 
+section img {
+    height: 8em;
+    filter: grayscale(100%) blur(0.5px) opacity(75%);
+}
+
 section h1 {
     font-weight: 700;
 	font-size: 3em;
